--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 ><span class="social">LinkedIn</span></a
               >
               <a
-                href="mailto:toussaint@example.com"
+                href="mailto:toussaintkoffi370@gmail.com"
                 class="reseau"
                 title="Gmail"
                 ><i class="bi bi-envelope-fill"></i
